# tapir-bot

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  Makefile  README.md  RELEASING.md  SETUP.md  SPEC.md  THIRD-PARTY-LICENSE  about.hbs  about.toml  config.example.toml  deny.toml  justfile
tapir-bot/: CHANGELOG.md  Cargo.toml
tapir-bot-core/: CHANGELOG.md  Cargo.toml
tapir-bot-core/src/: access.rs  backend.rs  commands.rs  config.rs  engine.rs  event.rs  lib.rs  memory.rs  meta.rs  tools.rs
tapir-bot-slack/: CHANGELOG.md  Cargo.toml
tapir-bot-slack/src/: client.rs  config.rs  lib.rs  protocol.rs  render.rs
tapir-bot/examples/: slack_bot.rs
tapir-bot/src/: lib.rs
