[package]
name = "tapir-bot-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Backend-neutral bot engine: turn lifecycle, access policy, memory, commands, and tool execution."

[lib]
name = "tapir_bot_core"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
toml.workspace = true
tokio.workspace = true
tracing.workspace = true
tapir.workspace = true
tapir-sandbox.workspace = true
libc.workspace = true
