[package]
name = "tapir-bot-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Backend-neutral bot engine: turn lifecycle, access policy, memory, commands, and tool execution."

[lib]
name = "tapir_bot_core"

[features]
# The container sandbox tool mode (`[agent].tools = "sandbox"`). Off by default:
# the base engine is text-only/host and pulls no docker/podman stack. Enable it
# to compile the per-channel container backend (tapir-sandbox).
sandbox = ["dep:tapir-sandbox", "dep:libc"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
toml.workspace = true
tokio.workspace = true
tracing.workspace = true
tapir.workspace = true
# Only compiled with the `sandbox` feature.
tapir-sandbox = { workspace = true, optional = true }
libc = { workspace = true, optional = true }
